# matrix_calc

./: CMakeLists.txt  README.md  main.c  test.c
src/: CMakeLists.txt  eval.c  eval.h  lexer.c  lexer.h  matrix.c  matrix.h  memory.c  memory.h  message.c  message.cpp  message.h  syntax.c  syntax.h
src/functions/: func_builtin.c  func_builtin.h  func_matrix.c  func_matrix.h  func_scalar.c  func_scalar.h
tests/: CMakeLists.txt  eval_test.c  eval_test.h  framework.c  framework.h  lexer_test.c  lexer_test.h  matrix_test.c  matrix_test.h  memory.h  memory_test.c  syntax_test.c  syntax_test.h
tests/ast/: test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
tests/functions/: test1.txt
tests/lexer/: function.txt  lexer1.txt  lexer2.txt
